--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <div class="game-message">
         <p></p>
         <div class="lower">
-	        <a class="keep-playing-button">Keep going</a>
+          <a class="keep-playing-button">Keep going</a>
           <a class="retry-button">Try again</a>
         </div>
       </div>
@@ -72,6 +72,11 @@
       </div>
     </div>
 
+    <div class="console-container">
+      <span>CloudBuilder Console (hover to expand)</span>
+      <pre id="console"></pre>
+    </div>
+
     <p class="game-explanation">
       <strong class="important">How to play:</strong> Use your <strong>arrow keys</strong> to move the tiles. When two tiles with the same number touch, they <strong>merge into one!</strong>
     </p>
@@ -92,6 +97,8 @@
   <script src="js/html_actuator.js"></script>
   <script src="js/grid.js"></script>
   <script src="js/tile.js"></script>
+  <script src="js/cloudbuilder-bundle.min.js"></script>
+  <script src="js/cloudbuilder.js"></script>
   <script src="js/local_storage_manager.js"></script>
   <script src="js/game_manager.js"></script>
   <script src="js/application.js"></script>
