--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <a class="retry-button">Try again</a>
         </div>
       </div>
-
+      
       <div class="grid-container">
         <div class="grid-row">
           <div class="grid-cell"></div>
@@ -70,6 +70,12 @@
       <div class="tile-container">
 
       </div>
+    </div>
+
+    <div class="leaderboard">
+      <div class="names"></div>
+      <div class="scores"></div>
+      <div style="clear: both;"></div>
     </div>
 
     <div class="console-container">
