Added name change form for leaderboards

--- a/index.html
+++ b/index.html
@@ -72,6 +72,17 @@
       </div>
     </div>
 
+    <p class="name-input">
+      Your <strong>name</strong> will appear in the leaderboards.
+    </p>
+    
+    <p>
+      <a class="name-input-change">Change</a>
+      <div class="name-input-left">
+        <input type="text" class="name-input-text"/>
+      </div>
+    </p>
+
     <div class="leaderboard">
       <div class="names"></div>
       <div class="scores"></div>
