Moved the name input panel to the game over screen

--- a/index.html
+++ b/index.html
@@ -68,6 +68,11 @@
           <a class="keep-playing-button">Keep going</a>
           <a class="retry-button">Try again</a>
           <div class="score-sharing"></div>
+          <div class="name-input">
+              <strong>Your name will appear in the leaderboards</strong>
+              <input type="text" class="name-input-text" spellcheck="false">
+              <input type="button" value="Change" class="name-input-change">
+          </div>
           <div class="mailing-list">
             <!-- MailChimp Signup Form -->
             <form action="http://gabrielecirulli.us8.list-manage.com/subscribe/post?u=991201206817cfb4e4247ed6c&amp;id=7928ea817b" method="post" name="mc-embedded-subscribe-form" class="mailing-list-form" target="_blank">
@@ -117,17 +122,6 @@
 
       </div>
     </div>
-
-    <p class="name-input">
-      Your <strong>name</strong> will appear in the leaderboards.
-    </p>
-    
-    <p>
-      <a class="name-input-change">Change</a>
-      <div class="name-input-left">
-        <input type="text" class="name-input-text"/>
-      </div>
-    </p>
 
     <div class="leaderboard">
       <div class="names"></div>
