--- a/index.html
+++ b/index.html
@@ -132,7 +132,9 @@
 
     <p class="game-explanation">
       Log-in to save game progress!<br/>
-      <a class="logout-button">Logout</a><a href="#loginEmailForm" class="login-email-button">E-mail</a><a class="login-facebook-button">Facebook</a><a class="login-google-button">Google+</a>
+      <div class="login-buttons">
+        <a class="logout-button">Logout</a><a href="#loginEmailForm" class="login-email-button">E-mail</a><a href="#loginFacebookForm" class="login-facebook-button">Facebook</a>
+      </div>
     </p>
 
     <div id="loginEmailForm" class="modalDialog">
@@ -142,12 +144,22 @@
         <p>Please enter your information below.</p>
         <p>
           <input type="email" class="email-input" placeholder="E-mail" spellcheck="false">
-          <input type="text" class="password-input" placeholder="Password" spellcheck="false">
+          <input type="password" class="password-input" placeholder="Password">
         </p>
         <p>
           <input type="button" value="Log in" class="login-button">
           <input type="button" value="Register" class="register-button">
         </p>
+      </div>
+    </div>
+
+    <div id="loginFacebookForm" class="modalDialog">
+      <div>
+        <a href="#close" title="Close" class="close">X</a>
+        <h2>Log in with facebook</h2>
+        <p>Your guest account will be associated to your facebook login, making it possible for you to continue playing on another device. Your current progress will not be affected.</p>
+        <div id="fb-root"></div>
+        <input type="button" value="Log in" class="login-button">
       </div>
     </div>
 
